[build-system]
requires = [
  "setuptools>=42",
  "setuptools-scm>=8.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "pyzernike"
requires-python = ">= 3.8"
dynamic = ["dependencies", "version"]
description = "Zernike polynomials"
license = {file = "LICENSE"}
authors = [
{name = "Artezaru", email = "artezaru.websites@proton.me"}
]
classifiers = [
  "Programming Language :: Python"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pyzernike", "pyzernike*"]
exclude = ["laboratory", "laboratory.*", "tests", "tests*", "examples", "examples*"]

[tool.setuptools.package-data]
"pyzernike.ressources" = ["*"]

[project.scripts]
pyzernike = "pyzernike.__main__:__main__"

[project.gui-scripts]
pyzernike-gui = "pyzernike.__main__:__main_gui__"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
version = {attr = "pyzernike.__version__.__version__"}

[project.optional-dependencies]
dev = [
    "sphinx",
    "pydata-sphinx-theme",
    "numpydoc",
    "pytest",
    "pyinstaller",
    "pytest-cov",
    "bumpver",
    "pyinstaller"
]